--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="notify-section">
             <p class="notify" id="DontMatch">❌ Pin Didn't Match, Please try again</p>
-            <p class="notify" id="match" >✅ Pin Matched... Secret door is opening for you</p>
+            <p class="notify" id="match" >✅ Pin Matched.... Secret door is opening for you</p>
         </div>
     </div>
      
